--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@mlc-ai/web-llm": "^0.2.80",
     "next": "16.1.1",
     "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
@@ -25,6 +24,6 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
