--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.8.1",
     "next": "16.1.1",
     "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tiktoken": "^1.0.22"
+    "tiktoken": "^1.0.22",
+    "umap-js": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
