--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@huggingface/transformers": "^3.8.1",
+    "@types/three": "^0.182.0",
     "next": "16.1.1",
     "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "three": "^0.182.0",
     "tiktoken": "^1.0.22",
     "umap-js": "^1.4.0"
   },
