--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "three": "^0.182.0",
     "tiktoken": "^1.0.22",
     "umap-js": "^1.4.0"
