--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "umap-js": "^1.4.0"
   },
   "devDependencies": {
+    "@cloudflare/kv-asset-handler": "^0.4.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
